@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-10-10T08:38:45Z",
-  "count_outdated" : 823,
-  "uniques_outdated" : 431,
-  "count" : 840,
+  "timestamp" : "2022-10-11T02:29:58Z",
+  "count_outdated" : 825,
+  "uniques_outdated" : 432,
+  "count" : 841,
   "uniques" : 442,
   "clones" : [
     {
-      "timestamp": "2022-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-09-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-10-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
