@@ -1,15 +1,10 @@
 {
-  "count": 17,
+  "count": 16,
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2022-09-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-09-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -54,7 +49,7 @@
     },
     {
       "timestamp": "2022-10-10T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
